<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50px"
            android:text="@string/titulo"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp"
            android:textStyle="bold"
            android:textSize="50px"/>

        <LinearLayout
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30px">

            <EditText
                android:id="@+id/mat1"
                android:layout_width="800px"
                android:layout_height="200px"
                android:inputType="numberDecimal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="113dp"
                android:hint="@string/mat1"
                android:layout_below="@id/titulo"/>

            <EditText
                android:id="@+id/mat2"
                android:layout_width="800px"
                android:layout_height="200px"
                android:inputType="numberDecimal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="219dp"
                android:hint="@string/mat2"
                android:layout_below="@id/mat1"/>

            <EditText
                android:id="@+id/mat3"
                android:layout_width="800px"
                android:layout_height="200px"
                android:inputType="numberDecimal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="327dp"
                android:hint="@string/mat3"
                android:layout_below="@id/mat2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_marginTop="50px"
                android:layout_height="125px"
                android:layout_below="@id/mat3"
                android:text="@string/btn"
                android:textSize="35px"
                android:onClick="evaluar"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_marginTop="5px"
                android:layout_height="125px"
                android:layout_below="@id/mat3"
                android:text="@string/btn2"
                android:textSize="35px"
                android:onClick="limpiar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firma"
                android:layout_marginTop="25px"
                android:textSize="35px"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>